[gd_scene load_steps=2 format=3 uid="uid://bfj6hso5vxxoo"]

[ext_resource type="Script" path="res://Main/Menu/Menu.gd" id="1_63ccg"]

[node name="Menu" type="PanelContainer"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -88.0
offset_right = 138.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_63ccg")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 42
text = "Play"

[node name="OptionsButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Quit"
